test/corpus/comments.txt
================================================================================
Line comment
================================================================================

// this is a comment
type t = int;

--------------------------------------------------------------------------------

(program
  (line_comment)
  (type_def_decl
    (p_type_def
      name: (identifier)
      (primitive_type))))

================================================================================
Block comment
================================================================================

/* this is a
   block comment */
type t = int;

--------------------------------------------------------------------------------

(program
  (block_comment)
  (type_def_decl
    (p_type_def
      name: (identifier)
      (primitive_type))))

================================================================================
Inline comment
================================================================================

type t = int; // inline comment

--------------------------------------------------------------------------------

(program
  (type_def_decl
    (p_type_def
      name: (identifier)
      (primitive_type)))
  (line_comment))

================================================================================
Multiple comments
================================================================================

// first comment
/* block */
// second comment
event eStart;

--------------------------------------------------------------------------------

(program
  (line_comment)
  (block_comment)
  (line_comment)
  (event_decl
    name: (identifier)))
